--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.32",
     "web-vitals": "^2.1.4"
