--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-select": "^5.8.0",
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.32",
-    "web-vitals": "^2.1.4"
+    "tslib": "^2.6.2",
+    "web-vitals": "^2.1.4",
+    "eslint": "^8.56.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,7 +49,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "globals": {
+      "global": true
+    }
   },
   "browserslist": {
     "production": [
